--- a/puppy_lab/app/views/puppies/index.html.erb
+++ b/puppy_lab/app/views/puppies/index.html.erb
@@ -1,2 +1,6 @@
-<h1>Puppies#index</h1>
-<p>Find me in app/views/puppies/index.html.erb</p>
+<h1>See Puppies Below</h1>
+<% @puppies.each do |puppy| %>
+<p><%= puppy.name %><%= puppy.age %><%= puppy.breed %></p> <%=link_to(name="show", url = "/puppies/#{puppy.id}")%> <%=link_to(name="edit", url = "/puppies/#{puppy.id}/edit")%> <%=link_to(name="delete", url = "/puppies/#{puppy.id}",method: :delete)%>
+<%end %>
+
+<a href="/puppies/new">Add New Puppy</a>
