--- a/puppy_lab/app/views/puppies/new.html.erb
+++ b/puppy_lab/app/views/puppies/new.html.erb
@@ -1,2 +1,18 @@
-<h1>Puppies#new</h1>
-<p>Find me in app/views/puppies/new.html.erb</p>
+<h1>Add a new puppy</h1>
+<% if @puppy.errors.any? %>
+<% @puppy.errors.full_messages.each do |error| %>
+  <p> 
+  <%= error %>
+  </p>
+  <% end %>
+  <% end %>
+<%= form_for @puppy,url:"/puppies" do |f|%>
+  <%= f.label :name %>
+  <%= f.text_field :name %>
+  <%= f.label :age %>
+  <%= f.text_field :age %>
+  <%= f.label :breed %>
+  <%= f.text_field :breed %>
+  <%= f.submit %>
+  <% end %>
+
