--- a/puppy_lab/app/views/puppies/show.html.erb
+++ b/puppy_lab/app/views/puppies/show.html.erb
@@ -1,2 +1,3 @@
-<h1>Puppies#show</h1>
-<p>Find me in app/views/puppies/show.html.erb</p>
+<h1>See Puppies Below</h1>
+<p><%= @puppy.name %><%= @puppy.age %><%= @puppy.breed %></p>
+
